--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 
 /* Google Fonts import*/
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Ubuntu+Condensed&display=swap')
+;
 
 
 /* Asterisks wildcard selector to select elements */
@@ -16,12 +17,16 @@ body {
     display: flex;
     flex-direction: column;
     color: #3a3a3a;
-    font-family: 'Roboto-condensed', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 /* Header */
 header {
     background-color: aqua;}
+
+h1 {
+    font-family: 'Ubuntu Condensed', sans-serif;
+}
 
 /* Main content */
 main {
