--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,14 @@ body {
 
 /* Header */
 header {
-    background-color: aqua;}
+    background-color: #ffffaa;
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 101;
+    width: 100%;
+    box-shadow: 0 2px 5px #3a3a3a;
+
+}
 
 h1 {
     font-family: 'Ubuntu Condensed', sans-serif;
