--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,9 @@ header {
     z-index: 101;
     width: 100%;
     box-shadow: 0 2px 5px #3a3a3a;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 
 }
 
@@ -68,6 +71,21 @@ left: 0;
 padding: 0 1rem;
 box-shadow: 0 2px 2px #3a3a3a;
 display: none;
+top: 100%;
+
+}
+
+/* Nav Switch */
+#nav-toggle:checked~nav {
+    display: block;
+}
+
+#nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    font-size: 2rem;
 }
 
 /* Main content */
