Add margin top of 0 to the main element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,7 @@ main {
     background-color: gainsboro;
     /* Make main element take up any surplus space to push footer down*/
     flex: 1 0 auto;
+    margin-top: 0;
 }
 
 /* Footer */
