--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,10 +101,19 @@ main {
 }
 
 /* Footer */
-footer {
-    background-color: bisque;
+footer { background-color: rgba(0, 0, 0, .3);
+    padding: 10px 0;
+    text-align: center;
 }
 
+#social-networks {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 10px 0;
+    list-style-type: none;
+}
 
 /* Media Queries */
 /* Tablets & larger (768px and up) */
