--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,9 @@ h1, h2, h3 {
     color: rgb(134, 86, 23);
 }
 
+.hidden-heading {
+    display: none;
+}
 /* Header */
 header {
     background-color: #f9f9f8;
