--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@ hr {
 
 /* Yoga Class Section*/
 #times {
-    background: url('../images/yoga\ 5.jpg')no-repeat center/cover;
+    background: url('../images/yoga 5.jpg')no-repeat center/cover;
     display: flex;
     flex-wrap: wrap;
 }
@@ -161,6 +161,11 @@ hr {
 /* Gallery page */
 #gallery-photos img {
     width: 100%;
+    line-height: 1em;
+}
+
+#gallery-photos {
+    line-height: 0;
 }
 
 /* Footer */
