Add styles to the form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,9 @@ main {
     /* Make main element take up any surplus space to push footer down*/
     flex: 1 0 auto;
     margin-top: 46px;
+    /* Enable flex properties for child element*/
+    display: flex;
+    flex-direction: column;
     
 }
 /* Meditation */
