--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 /* General styles */
@@ -29,6 +30,11 @@ h1, h2, h3 {
 
 .hidden-heading {
     display: none;
+}
+
+.required {
+    color:yellowgreen;
+    font-size: 80%;
 }
 /* Header */
 header {
@@ -192,7 +198,7 @@ hr {
     margin-bottom: 20px;
 }
 
-#contact-form input[type="text"], input[type="email"] {
+#contact-form input[type="text"], #contact-form input[type="email"] {
     width: 250px;
     border: 2px solid #3a3a3a;
     border-radius: 5px;
@@ -222,8 +228,16 @@ hr {
     border: 2px solid #3a3a3a;
     border-radius: 5px;
 }
+
+#contact-form button {
+    width: 50px;
+    font-size: 100%;
+    border-radius: 5px;
+}
+
+
 /* Footer */
-footer { background-color: #ffffff;
+footer { background-color: #c6c6c2;
     padding: 10px 0;
     text-align: center;
 }
