Fix the spaces between the images naming

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,7 +179,7 @@ hr {
 
 /* Contact */
 #contact {
-    background-image: url(../images/yoga\ 5.webp);
+    background-image: url(../images/yoga-5.webp);
     background-size: cover;
     background-position: 75%;
     flex-grow: 1;
